@@ -711,7 +711,8 @@ geometricPrecision
 sRGB
 
 # (-webkit-view-mode:) media feature:
-mini
 floating
-application
 fullscreen
+maximized
+minimized
+windowed
